--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ The purpose of this build is to demonstrate a Bootstrap build.
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/style/style.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>Clever tab name</title>
   </head>
   <body>
@@ -24,7 +24,6 @@ The purpose of this build is to demonstrate a Bootstrap build.
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -58,8 +57,8 @@ The purpose of this build is to demonstrate a Bootstrap build.
     <!-- jumbotron start -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <h1 class="display-4">Hello! My name is Marc</h1>
+        <p class="lead">This is a glimpse into the projects I have worked on</p>
       </div>
     </div>
     <!-- jumbotron end -->
